fix(sticky nav): align with title, bleed right

--- a/site/blocks/StickyNav.scss
+++ b/site/blocks/StickyNav.scss
@@ -36,10 +36,7 @@
 
     li:first-child {
         margin-left: 0;
-        @media (max-width: 768px) {
-            // completely flush with text for mobile
-            padding-left: 0;
-        }
+        padding-left: 0;
     }
 }
 
